--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,6 +12,7 @@
                 "${workspaceFolder}/src/clock/clock.cpp",
                 "${workspaceFolder}/src/timer/timer.cpp",
                 "${workspaceFolder}/src/time_sources/gps_time_source.cpp",
+                "${workspaceFolder}/src/time_sources/ntp_time_source.cpp",
                 "-I${workspaceFolder}/include",
                 "-o",
                 "build/program"
@@ -29,6 +30,7 @@
                 "${workspaceFolder}/src/clock/clock.cpp",
                 "${workspaceFolder}/src/timer/timer.cpp",
                 "${workspaceFolder}/src/time_sources/gps_time_source.cpp",
+                "${workspaceFolder}/src/time_sources/ntp_time_source.cpp",
                 "-I${workspaceFolder}/include",
                 "${file}",
                 "-o",
